tg-1327. Relevar cosas a limpiar del repositorio. Typos

--- a/back-end/hospital-api/src/main/resources/templates/epicrisis-chaco.html
+++ b/back-end/hospital-api/src/main/resources/templates/epicrisis-chaco.html
@@ -7,7 +7,7 @@
 <body>
     <div th:replace="fragments/general.html :: header(title='Epicrisis', subtitle='Alta de internación')"></div>
     <div th:replace="fragments/general.html :: personalData(patientType='Adulto Mayor')"></div>
-    <div th:replace="fragments/general.html :: diagnosis(message=document.pdf.diagnosis.title.chaco)"></div>
+    <div th:replace="fragments/general.html :: diagnosis(message='Enfermedades')"></div>
     <div th:replace="fragments/general.html :: personalHistory"></div>
     <div th:replace="fragments/general.html :: familyHistory"></div>
     <div th:replace="fragments/general.html :: allergies"></div>
