--- a/front-end/webapp/src/app/modules/historia-clinica/components/documents-summary/documents-summary.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/components/documents-summary/documents-summary.component.html
@@ -5,7 +5,7 @@
 				<div style="width: 35%">
 					<div style="padding-left: 16px;">
 						<mat-form-field class="input" appearance="outline"
-										*ngIf="form.value.field === 'CREATEDON'; else textInput">
+										*ngIf="form.value.field === 'CREATED_ON'; else textInput">
 							<mat-label>Fecha</mat-label>
 							<input matInput
 								   id="date"
