--- a/back-end/hospital-api/src/main/resources/templates/anamnesis-chaco.html
+++ b/back-end/hospital-api/src/main/resources/templates/anamnesis-chaco.html
@@ -7,7 +7,7 @@
 <body>
 	<div th:replace="fragments/general.html :: header(title='Evaluación de ingreso', subtitle='Internación')"></div>
 	<div th:replace="fragments/general.html :: personalData(patientType='Adulto Mayor')"></div>
-	<div th:replace="fragments/general.html :: diagnosis(message=document.pdf.diagnosis.title.chaco)"></div>
+	<div th:replace="fragments/general.html :: diagnosis(message='Enfermedades')"></div>
 	<div th:replace="fragments/general.html :: antropometicData"></div>
 	<div th:replace="fragments/general.html :: personalHistory"></div>
 	<div th:replace="fragments/general.html :: familyHistory"></div>
