--- a/back-end/hospital-api/src/main/resources/templates/anamnesis-minsal.html
+++ b/back-end/hospital-api/src/main/resources/templates/anamnesis-minsal.html
@@ -8,8 +8,8 @@
 	<div class="container">
 		<div th:replace="fragments/general.html :: header(title='Evaluación de ingreso', subtitle='Internación')"></div>
 		<div th:replace="fragments/general.html :: personalData(patientType='Paciente')"></div>
-		<div th:replace="fragments/general.html :: mainDiagnosis(message=document.pdf.maindiagnosis.title.minsal)"></div>
-		<div th:replace="fragments/general.html :: diagnosis(message=document.pdf.diagnosis.title.minsal)"></div>
+		<div th:replace="fragments/general.html :: mainDiagnosis(message='Diagnóstico principal')"></div>
+		<div th:replace="fragments/general.html :: diagnosis(message='Diagnósticos')"></div>
 		<div th:replace="fragments/general.html :: antropometicData"></div>
 		<div th:replace="fragments/general.html :: personalHistory"></div>
 		<div th:replace="fragments/general.html :: familyHistory"></div>
