--- a/back-end/hospital-api/src/main/resources/templates/epicrisis-minsal.html
+++ b/back-end/hospital-api/src/main/resources/templates/epicrisis-minsal.html
@@ -7,8 +7,8 @@
 <body>
     <div th:replace="fragments/general.html :: header(title='Epicrisis', subtitle='Alta de internación')"></div>
     <div th:replace="fragments/general.html :: personalData(patientType='Paciente')"></div>
-    <div th:replace="fragments/general.html :: mainDiagnosis(message=document.pdf.maindiagnosis.title.minsal)"></div>
-    <div th:replace="fragments/general.html :: diagnosis(message=document.pdf.diagnosis.title.chaco)"></div>
+    <div th:replace="fragments/general.html :: mainDiagnosis(message='Diagnóstico principal')"></div>
+    <div th:replace="fragments/general.html :: diagnosis(message='Diagnósticos')"></div>
     <div th:replace="fragments/general.html :: personalHistory"></div>
     <div th:replace="fragments/general.html :: familyHistory"></div>
     <div th:replace="fragments/general.html :: allergies"></div>
