--- a/back-end/hospital-api/src/main/resources/templates/evolutionnote-tandil.html
+++ b/back-end/hospital-api/src/main/resources/templates/evolutionnote-tandil.html
@@ -7,7 +7,7 @@
 <body>
 	<div th:replace="fragments/general.html :: header(title='Nota de evolución', subtitle='Internación')"></div>
 	<div th:replace="fragments/general.html :: personalData(patientType='Adulto Mayor')"></div>
-	<div th:replace="fragments/general.html :: diagnosis(message=document.pdf.diagnosis.title.tandil)"></div>
+	<div th:replace="fragments/general.html :: diagnosis(message='Enfermedades')"></div>
 	<div th:replace="fragments/general.html :: antropometicData"></div>
 	<div th:replace="fragments/general.html :: allergies"></div>
 	<div th:replace="fragments/general.html :: immunizations"></div>
