--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/vacunas/vacunas.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/vacunas/vacunas.component.html
@@ -12,9 +12,16 @@
 
 	<div fxLayout="row" fxLayoutGap="20px">
 		<div fxFlex="50">
-			<app-vacunas-summary [immunizations]="immunizations$ | async"
-			                     [editable]="false">
-			</app-vacunas-summary>
+			<app-summary-card [header]="vacunasSummary"
+                  [tooltip]="'historia-clinica.summary-card.vacunas.TOOLTIP'"
+				  [canEdit]="['PROFESIONAL_DE_SALUD', 'ESPECIALISTA_MEDICO', 'ENFERMERO']"
+				  [editable]="true"
+				  (openInNew)="openDialog()">
+				<app-table [model]="tableModel" *ngIf="tableModel?.data?.length > 0 else noInfo"></app-table>
+				<ng-template #noInfo>
+					<app-no-data></app-no-data>
+				</ng-template>
+			</app-summary-card>
 		</div>
 	</div>
 </app-content>
