--- a/front-end/webapp/src/app/modules/turnos/routes/home/routes/select-agenda/routes/agenda/agenda.component.html
+++ b/front-end/webapp/src/app/modules/turnos/routes/home/routes/select-agenda/routes/agenda/agenda.component.html
@@ -10,21 +10,17 @@
 		</div>
 	</ng-template>
 
-	<ng-template #headerTemplate let-days="days" let-locale="locale">
-		<div class="cal-day-headers">
-			<div class="cal-header" *ngFor="let day of days">
-				<strong>
-					{{ day.date | calendarDate:'weekViewColumnHeader':locale | titlecase}}
-				</strong>
-			</div>
-		</div>
-	</ng-template>
+	<div class="spinner" *ngIf="loading else calendar">
+		<mat-spinner color="primary"></mat-spinner>
+	</div>
 
-	<mwl-calendar-week-view [viewDate]="newAgendaService.getViewDate()"
-	                        [events]="newAgendaService.getEvents()"
-	                        [dayStartHour]="8" [dayEndHour]="22"
-	                        [hourSegmentTemplate]="weekViewHourSegmentTemplate"
-	                        [hourSegments]="newAgendaService.getMinutesInHour() / newAgendaService.getAppointmentDuration()"
-	                        [weekStartsOn]="newAgendaService.getWeekStartsOn()">
-	</mwl-calendar-week-view>
+	<ng-template #calendar>
+		<mwl-calendar-week-view [viewDate]="viewDate"
+								[events]="newAgendaService.getEvents()"
+								[dayStartHour]="dayStartHour" [dayEndHour]="dayEndHour"
+								[hourSegmentTemplate]="weekViewHourSegmentTemplate"
+								[hourSegments]="newAgendaService.getMinutesInHour() / newAgendaService.getAppointmentDuration()"
+								[weekStartsOn]="newAgendaService.getWeekStartsOn()">
+		</mwl-calendar-week-view>
+	</ng-template>
 </section>
