tg-1452 cambia manejo de opening hours en home turnos

--- a/front-end/webapp/src/app/modules/turnos/routes/home/routes/select-agenda/routes/agenda/agenda.component.html
+++ b/front-end/webapp/src/app/modules/turnos/routes/home/routes/select-agenda/routes/agenda/agenda.component.html
@@ -47,7 +47,9 @@
 								[dayStartHour]="dayStartHour" [dayEndHour]="dayEndHour"
 								[hourSegmentTemplate]="weekViewHourSegmentTemplate"
 								[hourSegments]="newAgendaService.getMinutesInHour() / newAgendaService.getAppointmentDuration()"
-								[weekStartsOn]="newAgendaService.getWeekStartsOn()">
+								[weekStartsOn]="newAgendaService.getWeekStartsOn()"
+								(beforeViewRender)="loadCalendar($event)" (hourSegmentClicked)="onClickedSegment($event)"
+		>
 		</mwl-calendar-week-view>
 	</ng-template>
 
