--- a/front-end/webapp/src/app/modules/turnos/routes/home/routes/select-agenda/routes/agenda/agenda.component.scss
+++ b/front-end/webapp/src/app/modules/turnos/routes/home/routes/select-agenda/routes/agenda/agenda.component.scss
@@ -3,3 +3,14 @@
 div.spinner {
 	@include centered-spinner;
 }
+
+::ng-deep {
+	.cal-week-view .cal-day-columns .bg-green {
+		background-color: #C9E7CB !important;
+	}
+
+	.cal-week-view .cal-day-columns .bg-blue {
+		background-color: #92C3E2 !important;
+	}
+
+}
