tg-1260 protege botón y pantalla nueva agenda por rol ADMINISTRADOR_AGENDA

--- a/front-end/webapp/src/app/modules/turnos/routes/home/routes/select-agenda/routes/agenda/agenda.component.scss
+++ b/front-end/webapp/src/app/modules/turnos/routes/home/routes/select-agenda/routes/agenda/agenda.component.scss
@@ -5,12 +5,16 @@ div.spinner {
 }
 
 ::ng-deep {
-	.cal-week-view .cal-day-columns .bg-green {
-		background-color: #C9E7CB !important;
-	}
+	.cal-week-view .cal-day-columns {
+		.bg-green {
+			background-color: #C9E7CB !important;
+			cursor: pointer;
+		}
 
-	.cal-week-view .cal-day-columns .bg-blue {
-		background-color: #92C3E2 !important;
+		.bg-blue {
+			background-color: #92C3E2 !important;
+			cursor: pointer;
+		}
 	}
 
 	.cal-event-title {
