tg-1480 Fix en Startup de Aplicación con Ansible por propiedad token_secret no definida

--- a/sgh-ansible/roles/sgh-back/templates/sgh.properties.j2
+++ b/sgh-ansible/roles/sgh-back/templates/sgh.properties.j2
@@ -1,5 +1,10 @@
+spring.profiles.default=prod
+token.secret=${TOKEN_SECRET:{{ token_secret }}}
+
 spring.datasource.url=jdbc:postgresql://{{
                         hostvars['postgres_master'].ansible_default_ipv4.address
                     }}:{{ database_port }}/{{ sgh_database_name }}
 spring.datasource.username={{ sgh_database_user_name }}
 spring.datasource.password={{ sgh_database_user_password }}
+
+internment.document.directory=${DOCUMENT_ROOT_DIRECTORY:{{ document_root_directory }}}
