--- a/front-end/webapp/src/app/modules/turnos/routes/home/home.component.html
+++ b/front-end/webapp/src/app/modules/turnos/routes/home/home.component.html
@@ -33,6 +33,57 @@
 		</div>
 	</section>
 
+	<section id="empty_calendar_home" *ngIf="!route.firstChild">
+		<ng-template #weekViewHourSegmentTemplate let-segment="segment" let-locale="locale"
+					 let-segmentHeight="segmentHeight" let-isTimeLabel="isTimeLabel">
+			<div #segmentElement class="cal-hour-segment" [style.height.px]="segmentHeight"
+				 [class.cal-hour-start]="segment.isStart" [class.cal-after-hour-start]="!segment.isStart"
+				 [ngClass]="segment.cssClass">
+				<div class="cal-time" *ngIf="isTimeLabel">
+					{{ segment.date | calendarDate:'weekViewHour':locale }}
+				</div>
+			</div>
+		</ng-template>
+
+		<div fxLayout="row" fxLayoutAlign="space-between center">
+			<div fxLayout="row">
+				<button mat-raised-button
+						color="primary"
+						mwlCalendarPreviousView
+						[view]="'week'"
+						[(viewDate)]="viewDate"
+				>
+					Anterior
+				</button>
+				<button mat-stroked-button
+						color="primary"
+						mwlCalendarToday
+						[(viewDate)]="viewDate"
+				>
+					Hoy
+				</button>
+				<button mat-raised-button
+						color="primary"
+						mwlCalendarNextView
+						[view]="'week'"
+						[(viewDate)]="viewDate"
+				>
+					Próximo
+				</button>
+			</div>
+
+			<div>
+				<h2>{{ viewDate | calendarDate:('weekViewTitle'): undefined : 1 }}</h2>
+			</div>
+		</div>
+		<mwl-calendar-week-view [viewDate]="viewDate"
+								[hourSegmentTemplate]="weekViewHourSegmentTemplate"
+								[dayStartHour]="8" [dayEndHour]="18"
+								[hourSegments]="1"
+		>
+		</mwl-calendar-week-view>
+	</section>
+
 	<router-outlet></router-outlet>
 
 </app-content>
